--- a/index.html
+++ b/index.html
@@ -60,71 +60,6 @@
       text-align: center;
       margin-bottom: 2rem;
     }
-    .menu-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1.5rem;
-    }
-    .dish {
-      background: white;
-      padding: 1rem;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-      text-align: center;
-      transition: transform 0.3s ease;
-    }
-    .dish:hover {
-      transform: translateY(-5px);
-    }
-    .dish img {
-      width: 100%;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 8px;
-    }
-    .dish h3 {
-      margin: 0.5rem 0;
-    }
-    .dish p {
-      color: var(--rosa);
-      font-weight: bold;
-    }
-    .dish button {
-      background: var(--rosa);
-      color: white;
-      border: none;
-      border-radius: 20px;
-      padding: 0.5rem 1rem;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-    .dish button:hover {
-      background: #c05485;
-    }
-    .payment-section {
-      text-align: center;
-      margin-top: 3rem;
-    }
-    .payment-section button {
-      margin: 0.5rem;
-      padding: 0.75rem 1.5rem;
-      border: 2px solid var(--rosa);
-      background: transparent;
-      color: var(--rosa);
-      font-weight: bold;
-      border-radius: 30px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-    .payment-section button:hover {
-      background: var(--rosa);
-      color: white;
-    }
-    #total {
-      font-size: 1.2rem;
-      font-weight: bold;
-      margin-top: 1rem;
-    }
     footer {
       text-align: center;
       padding: 2rem;
@@ -146,22 +81,21 @@
     <button onclick="document.getElementById('fastfood').scrollIntoView({ behavior: 'smooth' })">Ver Cardápio</button>
   </section>
 
-  <!-- Seção combinada com tostas, pizzas, hambúrgueres, frango e burritos -->
+  <!-- Seção combinada -->
   <section id="fastfood">
     <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem;">Fast Food</h2>
     <div style="display: flex; justify-content: space-between; flex-wrap: wrap; gap: 2rem;">
-      <div style="flex: 1 1 18%; background: white; border-radius: 20px; padding: 20px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);">
-        <h3 style="text-align: center; font-size: 24px; margin-bottom: 20px;">🥪 Tipos de Tostas</h3>
-        <ul style="list-style: none; padding: 0; font-size: 18px; color: var(--texto);">
+      <!-- Zona combinada: Tostas + Pizzas -->
+      <div style="flex: 1 1 38%; background: white; border-radius: 20px; padding: 20px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);">
+        <h3 style="text-align: center; font-size: 24px; margin-bottom: 10px;">🥪 Tipos de Tostas</h3>
+        <ul style="list-style: none; padding: 0; font-size: 18px; color: var(--texto); margin-bottom: 2rem;">
           <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Tosta Mista</li>
           <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Tosta de Frango</li>
           <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Tosta Atum</li>
           <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Tosta Vegetariana</li>
           <li style="padding: 10px 0;">Tosta de Queijo e Tomate</li>
         </ul>
-      </div>
-      <div style="flex: 1 1 18%; background: white; border-radius: 20px; padding: 20px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);">
-        <h3 style="text-align: center; font-size: 24px; margin-bottom: 20px;">🍕 Tipos de Pizza</h3>
+        <h3 style="text-align: center; font-size: 24px; margin-bottom: 10px;">🍕 Tipos de Pizza</h3>
         <ul style="list-style: none; padding: 0; font-size: 18px; color: var(--texto);">
           <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Margherita</li>
           <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Pepperoni</li>
@@ -170,35 +104,32 @@
           <li style="padding: 10px 0;">Frango com Catupiry</li>
         </ul>
       </div>
-      <div style="flex: 1 1 18%; background: white; border-radius: 20px; padding: 20px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);">
-        <h3 style="text-align: center; font-size: 24px; margin-bottom: 20px;">🍔 Tipos de Hambúrguer</h3>
-        <ul style="list-style: none; padding: 0; font-size: 18px; color: var(--texto);">
-          <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Cheeseburger</li>
-          <li style="padding: 10px 0; border-bottom: 1px solid #eee;">X-Bacon</li>
-          <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Hambúrguer Vegano</li>
-          <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Duplo Smash</li>
-          <li style="padding: 10px 0;">Chicken Burger</li>
-        </ul>
-      </div>
-      <div style="flex: 1 1 18%; background: white; border-radius: 20px; padding: 20px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);">
-        <h3 style="text-align: center; font-size: 24px; margin-bottom: 20px;">🍗 Pratos de Frango</h3>
-        <ul style="list-style: none; padding: 0; font-size: 18px; color: var(--texto);">
-          <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Frango Grelhado</li>
-          <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Frango à Passarinho</li>
-          <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Frango Frito</li>
-          <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Frango ao Caril</li>
-          <li style="padding: 10px 0;">Frango Crocante</li>
-        </ul>
-      </div>
-      <div style="flex: 1 1 18%; background: white; border-radius: 20px; padding: 20px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);">
-        <h3 style="text-align: center; font-size: 24px; margin-bottom: 20px;">🌯 Tipos de Burrito</h3>
-        <ul style="list-style: none; padding: 0; font-size: 18px; color: var(--texto);">
-          <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Burrito Clássico</li>
-          <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Burrito de Frango</li>
-          <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Burrito Picante</li>
-          <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Burrito Vegano</li>
-          <li style="padding: 10px 0;">Burrito com Queijo</li>
-        </ul>
+
+      <!-- Frango e Burritos lado a lado -->
+      <div style="display: flex; flex: 1 1 58%; gap: 2rem; flex-wrap: wrap;">
+        <!-- Pratos de Frango -->
+        <div style="flex: 1 1 48%; background: white; border-radius: 20px; padding: 20px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);">
+          <h3 style="text-align: center; font-size: 24px; margin-bottom: 20px;">🍗 Pratos de Frango</h3>
+          <ul style="list-style: none; padding: 0; font-size: 18px; color: var(--texto);">
+            <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Frango Grelhado</li>
+            <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Frango à Passarinho</li>
+            <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Frango Frito</li>
+            <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Frango ao Caril</li>
+            <li style="padding: 10px 0;">Frango Crocante</li>
+          </ul>
+        </div>
+
+        <!-- Tipos de Burritos -->
+        <div style="flex: 1 1 48%; background: white; border-radius: 20px; padding: 20px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);">
+          <h3 style="text-align: center; font-size: 24px; margin-bottom: 20px;">🌯 Tipos de Burrito</h3>
+          <ul style="list-style: none; padding: 0; font-size: 18px; color: var(--texto);">
+            <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Burrito Clássico</li>
+            <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Burrito de Frango</li>
+            <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Burrito Picante</li>
+            <li style="padding: 10px 0; border-bottom: 1px solid #eee;">Burrito Vegano</li>
+            <li style="padding: 10px 0;">Burrito com Queijo</li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
@@ -206,6 +137,7 @@
   <footer>
     <p>&copy; 2025 Lindyla Take Away. Todos os direitos reservados.</p>
   </footer>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script>
     AOS.init();
